fix toc gap and position

--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.55
+@version     1.0.56
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -245,6 +245,10 @@ domain("wikifunctions.org") {
   @media screen and (max-width: 999px) {
     .sidebar-toc-title {
       visibility: hidden;
+    }
+    .vector-below-page-title .sidebar-toc {
+      top: 55px !important;
+      left: 1px
     }
   }
     
